built deck interface